--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ margin-top: 10rem;
   border: none;
   background-color: beige;
 }
+.cancel{
+  width: 100%;
+  height: 2rem;
+  border: none;
+  background-color: beige;
+}
 select{
   height: 2rem;
   width: 15rem !important;
